fixed alignments issues

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1222,6 +1222,7 @@ option, select {
   text-align: center;
   white-space: nowrap;
   align-items: center;
+  text-align-last: center;
 }
 
 /* If targeting with a class */
